--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^8.5.0",
     "multer": "^1.4.5-lts.1",
     "redis": "^4.6.13",
+    "socket.io": "^4.8.1",
     "winston": "^3.18.3",
     "winston-logstash": "^1.2.1",
     "winston-logstash-transport": "^2.0.0",
