--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-fetch": "^3.3.2",
     "redis": "^4.6.13",
     "socket.io": "^4.8.1",
+    "streamifier": "^0.1.1",
     "winston": "^3.18.3",
     "winston-logstash": "^1.2.1",
     "winston-logstash-transport": "^2.0.0",
